# ROS-2-Agents

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  launch_robots.py  package.xml
config/: localization_amcl.yaml  localization_gt.yaml  localization_odometry.yaml  parameters_controller0_100robots1n.yaml  parameters_controller0_AA0.yaml  parameters_controller0_AA1.yaml  parameters_controller0_AA2.yaml  parameters_controller0_SPF1.yaml  parameters_controller0_SPF2.yaml  parameters_controller0_SPF6.yaml  parameters_controller1_AA0.yaml  parameters_controller1_AA1.yaml  parameters_controller1_AA2.yaml  parameters_controller1_SPF1.yaml  parameters_controller1_SPF2.yaml  parameters_controller1_SPF6.yaml  parameters_controller2_AA0.yaml  parameters_controller2_AA1.yaml  parameters_controller2_AA2.yaml  parameters_controller2_SPF1.yaml  parameters_controller2_SPF2.yaml  parameters_controller2_SPF6.yaml  parameters_controller3_AA0.yaml  parameters_controller3_AA1.yaml  parameters_controller3_AA2.yaml  parameters_controller3_SPF1.yaml  parameters_controller3_SPF2.yaml  parameters_controller3_SPF6.yaml  parameters_controller4_AA0.yaml  parameters_controller4_AA1.yaml  parameters_controller4_AA2.yaml  parameters_controller4_SPF1.yaml  parameters_controller4_SPF2.yaml  parameters_controller4_SPF6.yaml  parameters_controller5_AA0.yaml  parameters_controller5_AA1.yaml  parameters_controller5_AA2.yaml  parameters_controller5_SPF1.yaml  parameters_controller5_SPF2.yaml  parameters_controller5_SPF6.yaml  (+24 more)
include/ros2_agents/: consumption_model.hpp  defs.hpp  logger.hpp  message_container.hpp  negotiation_class.hpp  robot_class.hpp  robot_controller.hpp  robot_logger.hpp  spf.hpp  spf_utilities.hpp  supervisor.hpp  topic_utilities.hpp  visualization_class.hpp
launch/: fake_robot_and_controller_launch.py  profiled_robot_controller_launch.py  robot_controller_launch.py  supervisor_and_control_launch.py  tb3_launch.py
sim/: convert_spider.py  ext_sim10_robot_launch.py  ext_sim20_robot_launch.py  ext_sim3_robot_launch.py  ext_sim5_robot_launch.py  ext_sim7_robot_launch.py  map.inc  model.sdf  newsim100v3.world  newsim10v3.world  newsim20v3.world  newsim20v3.yaml  newsim40v3.world  newsim40v3.yaml  poses2world.py  poses_100_robots.yaml  poses_10_robots.yaml  poses_20_robots.yaml  poses_40_robots.yaml  robot_0.world  robot_1.world  robot_2.world  robot_3.world  robot_4.world  robot_5.world  robot_6.world  robot_template.world  spawn_robot_and_state_publisher_launch.py  spiderv4.inc  stage_sim100_robot_1node_launch.py  stage_sim100_robot_launch.py  stage_sim100_robot_launch_AA0_ALG0.py  stage_sim100_robot_launch_AA0_ALG1.py  stage_sim100_robot_launch_AA0_ALG2.py  stage_sim100_robot_launch_AA1.py  stage_sim100_robot_launch_AA1_ALG0.py  stage_sim100_robot_launch_AA1_ALG1.py  stage_sim100_robot_launch_AA1_ALG2.py  stage_sim100_robot_launch_AA2.py  stage_sim100_robot_launch_AA2_ALG0.py  (+8 more)
src/: CMakeLists.txt  negotiation_class.cpp  network_simulator.cpp  pub_initial_pose.py  python_sim.py  robot_class.cpp  robot_controller.cpp  robot_logger.cpp  spf.cpp  spf_utilities.cpp  supervisor_main.cpp  supervisor_msgs.cpp  supervisor_negotiation.cpp  supervisor_node.cpp  topic_utilities.cpp  visualization_class.cpp
