<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_agents</name>
  <version>0.0.0</version>
  <description>A ROS 2 package to study MWSN algorithms</description>
  <maintainer email="joscassan@uma.es">borja</maintainer>
  <license>GPL v3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>ros2_agents_msgs</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
